deployment-geoserver-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geoserver-test-service
spec:
  type: ClusterIP
  ports:
    - name: http-geoserver
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: geoserver-test-pod
