deployment-geoserver-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoserver-test-ingress
spec:
  rules:
  - host: geoserver-test-satellite-images.lab.sspcloud.fr
    http:
      paths:
      - backend:
          service:
            name: geoserver-test-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls: 
  - hosts:
    - geoserver-test-satellite-images.lab.sspcloud.fr
